--- a/TuttiTourney/src/app/voir-tournoi/voir-tournoi.component.html
+++ b/TuttiTourney/src/app/voir-tournoi/voir-tournoi.component.html
@@ -4,17 +4,17 @@
 
   <ng-container *ngFor="let poule of poules">
     <div class="poule">
-      <p> Poule numéro : {{poule.numeroPoule}}</p>
+      <p> Poule numéro : {{numeroToLetter(poule.numeroPoule)}}</p>
       <p> Matchs : </p>
       <ng-container *ngFor="let match of matchs[poule.numeroPoule || 0]">
         <p> {{match.nomEquipe1 }} contre {{match.nomEquipe2}} : {{match.scoreEquipe1}} - {{ match.scoreEquipe2 }}
         </p>
         <p *ngIf= "match.vainqueur != undefined"> Le vainqueur est : {{match.vainqueur}} </p>
       </ng-container>
-    </div>    
+    </div>
   </ng-container>
 
   <button *ngIf="lastTour>tourOBS" (click)="tourplus()"> voir tour suivant </button>
-      
+
   </div>
 
