--- a/TuttiTourney/src/app/next-tour/next-tour.component.html
+++ b/TuttiTourney/src/app/next-tour/next-tour.component.html
@@ -5,7 +5,7 @@
       <p> Pour passer au prochain tour : </p>
       <p> Indiquez le nombre de poules souhaités : <input type="number" name="nombrePoule" [(ngModel)]="nombrePoules">
       <p > Indiquez le nombre d'équipes à garder par poules : <input type="number" name="nombreEquipes" [(ngModel)]="nombreEquipes">
-      <p> Rappel : Vous avez {{poules.length}} poules de {{ equipes.length / poules.length}} equipes </p>
+      <!-- <p> Rappel : Vous avez {{poules.length}} poules de {{ equipes.length / poules.length}} equipes </p> -->
         <input type="submit" value="Envoyez">
      </form>
   </div>
